--- a/src/Views/BranchCompare.axaml
+++ b/src/Views/BranchCompare.axaml
@@ -1,35 +1,25 @@
-<Window xmlns="https://github.com/avaloniaui"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:m="using:SourceGit.Models"
-        xmlns:vm="using:SourceGit.ViewModels"
-        xmlns:v="using:SourceGit.Views"
-        xmlns:c="using:SourceGit.Converters"
-        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-        x:Class="SourceGit.Views.BranchCompare"
-        x:DataType="vm:BranchCompare"
-        x:Name="me"
-        Icon="/App.ico"
-        Title="{DynamicResource Text.BranchCompare}"
-        Background="Transparent"
-        WindowStartupLocation="CenterOwner"
-        MinWidth="1280" MinHeight="720"
-        ExtendClientAreaToDecorationsHint="True"
-        ExtendClientAreaChromeHints="NoChrome"
-        SystemDecorations="{OnPlatform Full, Linux=None}">
-  <Grid Margin="{Binding #me.WindowState, Converter={x:Static c:WindowStateConverters.ToContentMargin}}">
+<v:ChromelessWindow xmlns="https://github.com/avaloniaui"
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                    xmlns:m="using:SourceGit.Models"
+                    xmlns:vm="using:SourceGit.ViewModels"
+                    xmlns:v="using:SourceGit.Views"
+                    xmlns:c="using:SourceGit.Converters"
+                    mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+                    x:Class="SourceGit.Views.BranchCompare"
+                    x:DataType="vm:BranchCompare"
+                    x:Name="me"
+                    Icon="/App.ico"
+                    Title="{DynamicResource Text.BranchCompare}"
+                    MinWidth="1280" MinHeight="720"
+                    WindowStartupLocation="CenterOwner">
+  <Grid>
     <Grid.RowDefinitions>
       <RowDefinition Height="30"/>
       <RowDefinition Height="64"/>
       <RowDefinition Height="*"/>
     </Grid.RowDefinitions>
-
-    <!-- Custom window shadow for Linux -->
-    <Border Grid.Row="0" Grid.RowSpan="3"
-            Background="{DynamicResource Brush.Window}"
-            Effect="drop-shadow(0 0 6 #A0000000)"
-            IsVisible="{OnPlatform False, Linux=True}"/>
 
     <!-- TitleBar -->
     <Grid Grid.Row="0" ColumnDefinitions="Auto,Auto,*,Auto">
@@ -58,7 +48,7 @@
     </Grid>
 
     <!-- Compare Targets -->
-    <Border Grid.Row="1" Background="{DynamicResource Brush.Window}">
+    <Border Grid.Row="1">
       <Grid Margin="48,8,48,8" ColumnDefinitions="*,48,*">
         <Border Grid.Column="0" BorderBrush="{DynamicResource Brush.Border2}" BorderThickness="1" Background="{DynamicResource Brush.Contents}" CornerRadius="4" Padding="4">
           <Grid RowDefinitions="Auto,*">
@@ -103,7 +93,7 @@
     </Border>    
 
     <!-- Changes -->
-    <Border Grid.Row="2" Background="{DynamicResource Brush.Window}">
+    <Border Grid.Row="2">
       <Grid Margin="8,0,8,8">
         <Grid.ColumnDefinitions>
           <ColumnDefinition Width="256" MinWidth="200" MaxWidth="480"/>
@@ -177,64 +167,5 @@
         </Grid>
       </Grid>
     </Border>
-
-    <!-- Custom window sizer for Linux -->
-    <Grid Grid.Row="0" Grid.RowSpan="3" IsVisible="{OnPlatform False, Linux=True}" IsHitTestVisible="{Binding #me.WindowState, Converter={x:Static c:WindowStateConverters.IsNormal}}">
-      <Border Width="4" Height="4"
-              Background="Transparent"
-              HorizontalAlignment="Left" VerticalAlignment="Top"
-              Cursor="TopLeftCorner"
-              Tag="{x:Static WindowEdge.NorthWest}"
-              PointerPressed="CustomResizeWindow"/>
-
-      <Border Height="4" Margin="4,0"
-              Background="Transparent"
-              HorizontalAlignment="Stretch" VerticalAlignment="Top"
-              Cursor="TopSide"
-              Tag="{x:Static WindowEdge.North}"
-              PointerPressed="CustomResizeWindow"/>
-
-      <Border Width="4" Height="4"
-              Background="Transparent"
-              HorizontalAlignment="Right" VerticalAlignment="Top"
-              Cursor="TopRightCorner"
-              Tag="{x:Static WindowEdge.NorthEast}"
-              PointerPressed="CustomResizeWindow"/>
-
-      <Border Width="4" Margin="0,4"
-              Background="Transparent"
-              HorizontalAlignment="Left" VerticalAlignment="Stretch"
-              Cursor="LeftSide"
-              Tag="{x:Static WindowEdge.West}"
-              PointerPressed="CustomResizeWindow"/>
-
-      <Border Width="4" Margin="0,4"
-              Background="Transparent"
-              HorizontalAlignment="Right" VerticalAlignment="Stretch"
-              Cursor="RightSide"
-              Tag="{x:Static WindowEdge.East}"
-              PointerPressed="CustomResizeWindow"/>
-
-      <Border Width="4" Height="4"
-              Background="Transparent"
-              HorizontalAlignment="Left" VerticalAlignment="Bottom"
-              Cursor="BottomLeftCorner"
-              Tag="{x:Static WindowEdge.SouthWest}"
-              PointerPressed="CustomResizeWindow"/>
-
-      <Border Height="4" Margin="4,0"
-              Background="Transparent"
-              HorizontalAlignment="Stretch" VerticalAlignment="Bottom"
-              Cursor="BottomSide"
-              Tag="{x:Static WindowEdge.South}"
-              PointerPressed="CustomResizeWindow"/>
-
-      <Border Width="4" Height="4"
-              Background="Transparent"
-              HorizontalAlignment="Right" VerticalAlignment="Bottom"
-              Cursor="BottomRightCorner"
-              Tag="{x:Static WindowEdge.SouthEast}"
-              PointerPressed="CustomResizeWindow"/>
-    </Grid>
   </Grid>
-</Window>
+</v:ChromelessWindow>
