--- a/src/Views/FileHistories.axaml
+++ b/src/Views/FileHistories.axaml
@@ -1,33 +1,23 @@
-<Window xmlns="https://github.com/avaloniaui"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:m="using:SourceGit.Models"
-        xmlns:vm="using:SourceGit.ViewModels"
-        xmlns:v="using:SourceGit.Views"
-        xmlns:c="using:SourceGit.Converters"
-        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-        x:Class="SourceGit.Views.FileHistories"
-        x:DataType="vm:FileHistories"
-        x:Name="me"
-        Icon="/App.ico"
-        Title="{DynamicResource Text.FileHistory}"
-        Background="Transparent"
-        MinWidth="1280" MinHeight="720"
-        ExtendClientAreaToDecorationsHint="True"
-        ExtendClientAreaChromeHints="NoChrome"
-        SystemDecorations="{OnPlatform Full, Linux=None}">
-  <Grid Margin="{Binding #me.WindowState, Converter={x:Static c:WindowStateConverters.ToContentMargin}}">
+<v:ChromelessWindow xmlns="https://github.com/avaloniaui"
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                    xmlns:m="using:SourceGit.Models"
+                    xmlns:vm="using:SourceGit.ViewModels"
+                    xmlns:v="using:SourceGit.Views"
+                    xmlns:c="using:SourceGit.Converters"
+                    mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+                    x:Class="SourceGit.Views.FileHistories"
+                    x:DataType="vm:FileHistories"
+                    x:Name="me"
+                    Icon="/App.ico"
+                    Title="{DynamicResource Text.FileHistory}"
+                    MinWidth="1280" MinHeight="720">
+  <Grid>
     <Grid.RowDefinitions>
       <RowDefinition Height="30"/>
       <RowDefinition Height="*"/>
     </Grid.RowDefinitions>
-
-    <!-- Custom window shadow for Linux -->
-    <Border Grid.Row="0" Grid.RowSpan="2"
-            Background="{DynamicResource Brush.Window}"
-            Effect="drop-shadow(0 0 6 #A0000000)"
-            IsVisible="{OnPlatform False, Linux=True}"/>
 
     <!-- TitleBar -->
     <Grid Grid.Row="0" ColumnDefinitions="Auto,Auto,*,Auto">
@@ -56,7 +46,7 @@
     </Grid>
 
     <!-- Body -->
-    <Grid Grid.Row="1" Background="{DynamicResource Brush.Window}">
+    <Grid Grid.Row="1">
       <Grid.ColumnDefinitions>
         <ColumnDefinition Width="300" MinWidth="300" MaxWidth="600"/>
         <ColumnDefinition Width="4"/>
@@ -143,64 +133,5 @@
         </Grid>
       </Grid>
     </Grid>
-
-    <!-- Custom window sizer for Linux -->
-    <Grid Grid.Row="0" Grid.RowSpan="2" IsVisible="{OnPlatform False, Linux=True}" IsHitTestVisible="{Binding #me.WindowState, Converter={x:Static c:WindowStateConverters.IsNormal}}">
-      <Border Width="4" Height="4"
-              Background="Transparent"
-              HorizontalAlignment="Left" VerticalAlignment="Top"
-              Cursor="TopLeftCorner"
-              Tag="{x:Static WindowEdge.NorthWest}"
-              PointerPressed="CustomResizeWindow"/>
-
-      <Border Height="4" Margin="4,0"
-              Background="Transparent"
-              HorizontalAlignment="Stretch" VerticalAlignment="Top"
-              Cursor="TopSide"
-              Tag="{x:Static WindowEdge.North}"
-              PointerPressed="CustomResizeWindow"/>
-
-      <Border Width="4" Height="4"
-              Background="Transparent"
-              HorizontalAlignment="Right" VerticalAlignment="Top"
-              Cursor="TopRightCorner"
-              Tag="{x:Static WindowEdge.NorthEast}"
-              PointerPressed="CustomResizeWindow"/>
-
-      <Border Width="4" Margin="0,4"
-              Background="Transparent"
-              HorizontalAlignment="Left" VerticalAlignment="Stretch"
-              Cursor="LeftSide"
-              Tag="{x:Static WindowEdge.West}"
-              PointerPressed="CustomResizeWindow"/>
-
-      <Border Width="4" Margin="0,4"
-              Background="Transparent"
-              HorizontalAlignment="Right" VerticalAlignment="Stretch"
-              Cursor="RightSide"
-              Tag="{x:Static WindowEdge.East}"
-              PointerPressed="CustomResizeWindow"/>
-
-      <Border Width="4" Height="4"
-              Background="Transparent"
-              HorizontalAlignment="Left" VerticalAlignment="Bottom"
-              Cursor="BottomLeftCorner"
-              Tag="{x:Static WindowEdge.SouthWest}"
-              PointerPressed="CustomResizeWindow"/>
-
-      <Border Height="4" Margin="4,0"
-              Background="Transparent"
-              HorizontalAlignment="Stretch" VerticalAlignment="Bottom"
-              Cursor="BottomSide"
-              Tag="{x:Static WindowEdge.South}"
-              PointerPressed="CustomResizeWindow"/>
-
-      <Border Width="4" Height="4"
-              Background="Transparent"
-              HorizontalAlignment="Right" VerticalAlignment="Bottom"
-              Cursor="BottomRightCorner"
-              Tag="{x:Static WindowEdge.SouthEast}"
-              PointerPressed="CustomResizeWindow"/>
-    </Grid>
   </Grid>
-</Window>
+</v:ChromelessWindow>
