--- a/src/Views/Preference.axaml
+++ b/src/Views/Preference.axaml
@@ -1,33 +1,23 @@
-<Window xmlns="https://github.com/avaloniaui"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:sys="clr-namespace:System;assembly=mscorlib"
-        xmlns:m="using:SourceGit.Models"
-        xmlns:c="using:SourceGit.Converters"
-        xmlns:ac="using:Avalonia.Controls.Converters"
-        xmlns:vm="using:SourceGit.ViewModels"
-        xmlns:v="using:SourceGit.Views"
-        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-        x:Class="SourceGit.Views.Preference"
-        x:DataType="vm:Preference"
-        x:Name="me"
-        Icon="/App.ico"
-        Title="{DynamicResource Text.Preference}"
-        Background="Transparent"
-        Width="600" SizeToContent="Height"
-        CanResize="False"
-        WindowStartupLocation="CenterScreen"
-        ExtendClientAreaToDecorationsHint="True"
-        ExtendClientAreaChromeHints="NoChrome"
-        SystemDecorations="{OnPlatform Full, Linux=None}">
-  <Grid RowDefinitions="Auto,Auto" Margin="{OnPlatform 0, Linux=6}">
-    <!-- Custom window shadow for Linux -->
-    <Border Grid.Row="0" Grid.RowSpan="2"
-            Background="{DynamicResource Brush.Window}"
-            Effect="drop-shadow(0 0 6 #A0000000)"
-            IsVisible="{OnPlatform False, Linux=True}"/>
-
+<v:ChromelessWindow xmlns="https://github.com/avaloniaui"
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                    xmlns:sys="clr-namespace:System;assembly=mscorlib"
+                    xmlns:m="using:SourceGit.Models"
+                    xmlns:c="using:SourceGit.Converters"
+                    xmlns:ac="using:Avalonia.Controls.Converters"
+                    xmlns:vm="using:SourceGit.ViewModels"
+                    xmlns:v="using:SourceGit.Views"
+                    mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+                    x:Class="SourceGit.Views.Preference"
+                    x:DataType="vm:Preference"
+                    x:Name="me"
+                    Icon="/App.ico"
+                    Title="{DynamicResource Text.Preference}"
+                    Width="600" SizeToContent="Height"
+                    CanResize="False"
+                    WindowStartupLocation="CenterScreen">
+  <Grid RowDefinitions="Auto,Auto">
     <!-- TitleBar -->
     <Grid Grid.Row="0" ColumnDefinitions="Auto,*,Auto" Height="30">
       <Border Grid.Column="0" Grid.ColumnSpan="3"
@@ -62,7 +52,7 @@
     </Grid>
 
     <!-- Body -->
-    <Border Grid.Row="1" Background="{DynamicResource Brush.Window}">
+    <Border Grid.Row="1">
       <TabControl>
         <TabItem>
           <TabItem.Header>
@@ -553,4 +543,4 @@
       </TabControl>
     </Border>    
   </Grid>
-</Window>
+</v:ChromelessWindow>
