--- a/src/Resources/Styles.axaml
+++ b/src/Resources/Styles.axaml
@@ -30,6 +30,10 @@
 
   <Style Selector="Window[WindowState=Maximized]">
     <Setter Property="BorderThickness" Value="0"/>
+    <Setter Property="Padding" Value="0"/>
+  </Style>
+  
+  <Style Selector="Window[WindowState=Maximized].fix_maximized_padding">
     <Setter Property="Padding" Value="6"/>
   </Style>
 
